Bug 297912 - 'Reply to' uses wrong identity if not explicitly set in 'folder properties'
Summary: 'Reply to' uses wrong identity if not explicitly set in 'folder properties'
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.8.2
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-11 16:17 UTC by Christian Quast
Modified: 2015-01-26 07:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Quast 2012-04-11 16:17:30 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/534.34 (KHTML, like Gecko) konqueror/4.8.2 Safari/534.34
Build Identifier: 

I have multiple IMAP accounts and multiple identities configured in KMail (openSUSE 12.1 updated KDE using the KDE build service - 4.8.2-340.1.x86_64).

For each of the IMAP accounts I set up a certain identity via 
   'Settings->Configure KMail -> Accounts -> MYACC -> Advanced Tab -> Identity Settings'. 

When I select the inbox folder and look at the 'Folder Properties' dialogue the 'Use default identity' checkbox is checked and the grayed-out 'Sender Identity' drop-down box holds the correct identity. In the 'Folder properties' dialogue I also enabled the option to keep my replies in the same folder.

Writing a new message with the inbox selected will use the identity configured for this account. 

However, when I select a mail and hit 'reply to [all]' the default identity set for KMail is used. If I specifically select the identity in the 'Folder Properties' dialogue, just deactivate the 'Use default identity' option as the correct identity is already set, it works.

Now the strange thing: I did this for one inbox and then activated the 'Use default identity' option again. For roughly two thirds of all mails in that indox the composer window is opened now showing the correct sender identity. For the rest it shows the default identity set for KMail.

For other folders I tested, KMail always uses the KMail default identity when replying to mails with the 'Use default identity' option enabled.

I have also deleted and re-added the account with no difference.

I have found similar reports using the search but they describe a different behaviours:
Bug 279504 talks about using the wrong identities even though the correct was selected (in the composer I assume) - this works for me. 
Bug 289785 sounds like the behaviour I am expecting. I am not sure when the 'Sender Identity' option was added to KMail or better when this feature was shipped with standard KDE so I am not sure if this report is related to mine.

I don't think it's a major bug as setting the 'Sender Identity' using the 'Folder Properties' dialogue circumvents the problem.


I hope I have put enough information to reproduce this behaviour

Cheers
   Christian

Reproducible: Always

Steps to Reproduce:
1. create multiple identities in KMail
2. create multiple mail accounts and select one of the identities as the default identiy for that account
3. reply to a mail 
Actual Results:  
the composer shows / uses the KMail default idenity

Expected Results:  
the composer should use the default identity for the account
Comment 1 Andre Woebbeking 2012-04-13 08:13:42 UTC
I can confirm this. I also set the right identity in folder properties but after some time (restart?) this setting is gone and the global default identity is used again.
Comment 2 Laurent Montel 2012-04-18 16:53:13 UTC
Git commit 4477bc411acba4a68c4d85fabf7f4c5328709abe by Montel Laurent.
Committed on 18/04/2012 at 18:51.
Pushed by mlaurent into branch 'master'.

Fix bug when we reply and it doesn't take good identity when we use

default identity from account.

David reported me it and it was reported to Bug 297912 - 'Reply to' uses
wrong identity if not explicitly set in 'folder properties'

FIXED-IN: 4.8.3

M  +8    -8    kmail/kmcommands.cpp
M  +1    -1    kmail/kmmainwidget.cpp
M  +0    -6    kmail/util.cpp
M  +0    -1    kmail/util.h
M  +14   -10   mailcommon/mailutil.cpp
M  +1    -0    mailcommon/mailutil.h

http://commits.kde.org/kdepim/4477bc411acba4a68c4d85fabf7f4c5328709abe
Comment 3 Laurent Montel 2012-04-18 16:55:35 UTC
Git commit d4da0039e83bd2e33b74fc08b5b4681155f1698d by Montel Laurent.
Committed on 18/04/2012 at 18:51.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix bug when we reply and it doesn't take good identity when we use

default identity from account.

David reported me it and it was reported to Bug 297912 - 'Reply to' uses
wrong identity if not explicitly set in 'folder properties'

FIXED-IN: 4.8.3
(cherry picked from commit 4477bc411acba4a68c4d85fabf7f4c5328709abe)

Conflicts:

	mailcommon/mailutil.cpp

M  +8    -8    kmail/kmcommands.cpp
M  +1    -1    kmail/kmmainwidget.cpp
M  +0    -6    kmail/util.cpp
M  +0    -1    kmail/util.h
M  +17   -5    mailcommon/mailutil.cpp
M  +1    -0    mailcommon/mailutil.h

http://commits.kde.org/kdepim/d4da0039e83bd2e33b74fc08b5b4681155f1698d