Fix bug when we reply and it doesn't take good identity when we use

default identity from account.

David reported me it and it was reported to Bug 297912 - 'Reply to' uses
wrong identity if not explicitly set in 'folder properties'

FIXED-IN: 4.8.3
BUG: 297912